gap loader fixed

--- a/css/style.css
+++ b/css/style.css
@@ -94,8 +94,7 @@ header {
   margin: 0 auto;
   display: flex;
   flex-wrap: wrap;
-  justify-content: space-between;
-  row-gap: 22px;
+  gap: 20px;
   padding: 18px 0;
 }
 .loader {
